<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_logo"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/twentyFive"
        android:src="@drawable/parcelwala" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ln_privacy"
        android:layout_below="@+id/iv_logo"
        android:layout_marginTop="@dimen/ten"
        android:fillViewport="true"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:id="@+id/ln_menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/fifteen"
            android:layout_marginEnd="@dimen/fifteen"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.skydoves.expandablelayout.ExpandableLayout
                    android:id="@+id/expandable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:expandable_duration="300"
                    app:expandable_isExpanded="false"
                    app:expandable_spinner_color="@android:color/transparent"
                    app:expandable_parentLayout="@layout/pickup_parent_layout"
                    app:expandable_secondLayout="@layout/pickup_child_layout" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/one"
                android:layout_marginTop="@dimen/eight"
                android:background="@color/colorB" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.skydoves.expandablelayout.ExpandableLayout
                    android:id="@+id/expandable_delivery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:expandable_duration="300"
                    app:expandable_isExpanded="false"
                    app:expandable_parentLayout="@layout/delivery_parent_layout"
                    app:expandable_secondLayout="@layout/delivery_child_layout"
                    app:expandable_spinner_color="@android:color/transparent"
                     />


            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/one"
                android:layout_marginTop="@dimen/eight"
                android:background="@color/colorB" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.skydoves.expandablelayout.ExpandableLayout
                    android:id="@+id/expandable_return"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:expandable_duration="300"
                    app:expandable_isExpanded="false"
                    app:expandable_parentLayout="@layout/return_parent_layout"
                    app:expandable_secondLayout="@layout/return_child_layout"
                    app:expandable_spinner_color="@android:color/transparent" />


            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/one"
                android:layout_marginTop="@dimen/eight"
                android:background="@color/colorB" />

            <TextView
                android:id="@+id/tv_nav_collection_parcel_list"
                style="@style/RobotoRegular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/eight"
                android:drawableLeft="@drawable/ic_nav_delivery_list"
                android:drawablePadding="@dimen/navPadding"
                android:gravity="center_vertical"
                android:padding="@dimen/two"
                android:text="@string/collection_parcel_list"
                android:textColor="@color/colorG"
                android:textSize="@dimen/sixteen" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/one"
                android:layout_marginTop="@dimen/eight"
                android:background="@color/colorB" />

            <TextView
                android:id="@+id/tv_nav_paid_parcel_list"
                style="@style/RobotoRegular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/eight"
                android:drawableLeft="@drawable/ic_nav_payment_list"
                android:drawablePadding="@dimen/navPadding"
                android:gravity="center_vertical"
                android:padding="@dimen/two"
                android:text="@string/paid_parcel_list"
                android:textColor="@color/colorG"
                android:textSize="@dimen/sixteen" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/one"
                android:layout_marginTop="@dimen/eight"
                android:background="@color/colorB" />

            <TextView
                android:id="@+id/tv_nav_logout"
                style="@style/RobotoRegular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/eight"
                android:drawableLeft="@drawable/ic_nav_logout"
                android:drawablePadding="@dimen/navPadding"
                android:gravity="center_vertical"
                android:padding="@dimen/two"
                android:text="@string/logout"
                android:textColor="@color/colorG"
                android:textSize="@dimen/sixteen" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/one"
                android:layout_marginTop="@dimen/eight"
                android:background="@color/colorB" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/ln_privacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/ten"
        android:layout_marginBottom="@dimen/ten"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_nav_privacy_policy"
            style="@style/RobotoRegular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="@dimen/two"
            android:paddingStart="@dimen/five"
            android:paddingEnd="@dimen/five"
            android:text="@string/privacy_policy"
            android:textColor="@color/colorG"
            android:textSize="@dimen/fourteen" />


        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorG" />

        <TextView
            android:id="@+id/tv_nav_condition"
            style="@style/RobotoRegular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical|end"
            android:padding="@dimen/two"
            android:paddingStart="@dimen/five"
            android:paddingEnd="@dimen/five"
            android:text="@string/terms_and_conditions"
            android:textColor="@color/colorG"
            android:textSize="@dimen/fourteen" />

    </LinearLayout>

</RelativeLayout>

